--- a/MLV/templates/task_common.html
+++ b/MLV/templates/task_common.html
@@ -31,9 +31,7 @@
   <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/d3.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/venn.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/d3.brush.lite.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/d3.forced.directed.graph.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/d3.multichord.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/venngraph.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/task.js' %}"></script>
 </body>
 </html>
