--- a/MLV/templates/main.html
+++ b/MLV/templates/main.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-  <title>Welcome to MLV</title>
+  <title>Venn-diaNet</title>
 
   <!-- css -->
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
@@ -12,8 +12,8 @@
 <body>
   <div class="container">
   <div class="title">
-    <h1>Welcome to MLV!</h1>
-    <span class="small">Benjamin Hur, Dongwon Kang, Sangseon Lee, Sun Kim</span>
+    <h1>Welcome to Venn-diaNet</h1>
+    <span class="small">Benjamin Hur, Dongwon Kang, Sangseon Lee, Ji-hwan Moon, and Sun Kim</span>
   </div>
 
 
@@ -35,6 +35,17 @@
       </form>
       </div>
     </div>
+
+
+	<div class="col-md-12">
+	<h4> TEST SETS </h4>
+	</div>
+	<div class="col-md-10">
+		<a href="//bhi2.snu.ac.kr/MLV_PUBLIC/dataset/E6E7+E2.WT.txt" download>CONDITION 1</a> <br>
+		<a href="//bhi2.snu.ac.kr/MLV_PUBLIC/dataset/E6E7.WT.txt" download>CONDITION 2</a>  <br>
+		<a href="//bhi2.snu.ac.kr/MLV_PUBLIC/dataset/WT+E2.WT.txt" download>CONDITION 3</a> <br>
+	</div>
+
   </div>
 
 
@@ -46,16 +57,19 @@
         <li>More exact targeted gene prediction by our novel selection method</li>
       </ul>
     </div>
+
     <div class="col-md-4">
-      <h3>Our database performance ...</h3>
+      <h3>TEMP Temp temp</h3>
       <div class="desc">
-        about <span class="big">50%</span> performance improvement
+	  TEMPTEMP?
       </div>
     </div>
+
     <div class="col-md-4">
-      <h3>Our database currently ...</h3>
+      <h3>How to use</h3>
       <div class="desc">
-        serviced {{ count_work }} analyze.
+	  Manual
+        {{ count_work }}
       </div>
     </div>
   </div>
