--- a/MLV/templates/select.html
+++ b/MLV/templates/select.html
@@ -8,11 +8,9 @@
 {% endblock widget %}
 
 {% block content %}
-Your task id is {{ id }}.
-
 
 <h3>Select condition set.</h3>
-<span id="message">Select/exclude conditions to be analyzed.</span>
+<span id="message">Select conditions that will be used as "Seeds"</span>
 
 <div class="row-select">
   <div class="left" id="venn"></div>
