--- a/MLV/templates/main.html
+++ b/MLV/templates/main.html
@@ -8,24 +8,59 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
   <link rel="stylesheet" href="{% static 'css/main.css' %}">
+
+  <style>
+  .information_container{
+
+	display: inline-block;
+	width:100%;
+
+  }
+
+  .image_container{
+
+	float: left;
+	width: 700px;
+
+  }
+
+  .manual_container{
+	margin-left:10px;
+	margin-top:20px;
+	display: inline-block;
+  }
+
+
+  </style>
+
+  
 </head>
 <body>
-  <div class="container">
-  <div class="title">
+  <div class="container" style="padding-top:30px;">
+  <div class="title" style="padding-top: 10px; padding-bottom: 10px;">
     <h1>Welcome to Venn-diaNet</h1>
     <span class="small">Benjamin Hur, Dongwon Kang, Sangseon Lee, Ji-hwan Moon, and Sun Kim</span>
   </div>
 
+	<div class="col-md-12" style="padding-top: 10px; padding-left:1px; padding-bottom:10px;">
 
-  <div class="row row-submit">
+		<strong><font size="4"> Test Sets : </font></strong>
+		<a href="//bhi2.snu.ac.kr/MLV_PUBLIC/dataset/E6E7+E2.WT.txt" download>CONDITION 1</a> 
+		<a href="//bhi2.snu.ac.kr/MLV_PUBLIC/dataset/E6E7.WT.txt" download>CONDITION 2</a>  
+		<a href="//bhi2.snu.ac.kr/MLV_PUBLIC/dataset/WT+E2.WT.txt" download>CONDITION 3</a> <br>
+
+	</div>
+
+
+  <div class="row row-submit" style="padding-bottom: 5px;">
     <div class="col-md-12">
       <div class="form-group">
       <form action="work/generate/" method="GET">
-        <h3>Try our service!</h3>
         <div class="row">
         <div class="col-md-10">
           <div class="form-group">
-          <input type="text" class="form-control" placeholder="Type name of analyze, or just leave empty" name="id">
+         	 <input type="text" class="form-control" placeholder="Type name of analyze, or just leave empty" name="id">
+			  <font size="2"> > Typed name will be your analysis barcode</font>
           </div>
         </div>
         <div class="col-md-2">
@@ -35,44 +70,18 @@
       </form>
       </div>
     </div>
+ </div>
 
-
-	<div class="col-md-12">
-	<h4> TEST SETS </h4>
+ <div class="information_container">
+ 	<div class="image_container">
+		<img src="//bhi2.snu.ac.kr/MLV_static/img/Venndianet_workflow.png" style="width: 100%; object-fit: contain"/>
 	</div>
-	<div class="col-md-10">
-		<a href="//bhi2.snu.ac.kr/MLV_PUBLIC/dataset/E6E7+E2.WT.txt" download>CONDITION 1</a> <br>
-		<a href="//bhi2.snu.ac.kr/MLV_PUBLIC/dataset/E6E7.WT.txt" download>CONDITION 2</a>  <br>
-		<a href="//bhi2.snu.ac.kr/MLV_PUBLIC/dataset/WT+E2.WT.txt" download>CONDITION 3</a> <br>
+	<div class="manual_container">
+	 Manual<br>
+	 Citation<br>
+
 	</div>
-
-  </div>
-
-
-  <div class="row">
-    <div class="col-md-4">
-      <h3>Our service provides ...</h3>
-      <ul>
-        <li>Detailed selection method based on venn diagram</li>
-        <li>More exact targeted gene prediction by our novel selection method</li>
-      </ul>
-    </div>
-
-    <div class="col-md-4">
-      <h3>TEMP Temp temp</h3>
-      <div class="desc">
-	  TEMPTEMP?
-      </div>
-    </div>
-
-    <div class="col-md-4">
-      <h3>How to use</h3>
-      <div class="desc">
-	  Manual
-        {{ count_work }}
-      </div>
-    </div>
-  </div>
+ </div>
 
 
   <!-- scripts -->
