--- a/MLV/templates/main.html
+++ b/MLV/templates/main.html
@@ -12,15 +12,14 @@
   <style>
   .information_container{
 
-	display: inline-block;
-	width:100%;
+	display : flex;
+	width:80%;
 
   }
 
   .image_container{
 
 	float: left;
-	width: 700px;
 
   }
 
@@ -77,8 +76,8 @@
 		<img src="//bhi2.snu.ac.kr/MLV_static/img/Venndianet_workflow.png" style="width: 100%; object-fit: contain"/>
 	</div>
 	<div class="manual_container">
-	 Manual<br>
-	 Citation<br>
+	 <font color="blue">Manual</font> <br>
+	 <font color="blue">Citation</font><br>
 
 	</div>
  </div>
