--- a/MLV/templates/upload.html
+++ b/MLV/templates/upload.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 
-<h3>Upload DEG p-value files.</h3>
+<h3>Upload DEG files.</h3>
 <span>Each file indicates different conditions.</span>
 
 {% if upload_file_count %}
