--- a/MLV/templates/main.html
+++ b/MLV/templates/main.html
@@ -38,16 +38,16 @@
   <div class="container" style="padding-top:30px;">
   <div class="title" style="padding-top: 10px; padding-bottom: 10px;">
     <h1>Welcome to Venn-diaNet</h1>
-    <span class="small">Benjamin Hur, Dongwon Kang, Sangseon Lee, Ji-hwan Moon, and Sun Kim</span>
+	<!--
+    <span class="small">Benjamin Hur, Dongwon Kang, Sangseon Lee, Ji hwan Moon, and Sun Kim</span>
+	-->
   </div>
 
 	<div class="col-md-12" style="padding-top: 10px; padding-left:1px; padding-bottom:10px;">
-
 		<strong><font size="4"> Test Sets : </font></strong>
-		<a href="//bhi2.snu.ac.kr/MLV_PUBLIC/dataset/E6E7+E2.WT.txt" download>CONDITION 1</a> 
-		<a href="//bhi2.snu.ac.kr/MLV_PUBLIC/dataset/E6E7.WT.txt" download>CONDITION 2</a>  
-		<a href="//bhi2.snu.ac.kr/MLV_PUBLIC/dataset/WT+E2.WT.txt" download>CONDITION 3</a> <br>
-
+		<a href="//bhi2.snu.ac.kr/MLV_PUBLIC/dataset/E6E7+E2.WT.txt" download>EXPERIMENT 1</a> 
+		<a href="//bhi2.snu.ac.kr/MLV_PUBLIC/dataset/E6E7.WT.txt" download>EXPERIMENT 2</a>  
+		<a href="//bhi2.snu.ac.kr/MLV_PUBLIC/dataset/WT+E2.WT.txt" download>EXPERIMENT 3</a> <br>
 	</div>
 
 
@@ -59,7 +59,14 @@
         <div class="col-md-10">
           <div class="form-group">
          	 <input type="text" class="form-control" placeholder="Type name of analyze, or just leave empty" name="id">
-			  <font size="2"> > Typed name will be your analysis barcode</font>
+			  <font size="2"> 
+			  	> Typed name will be your analysis barcode
+			  </font><br>
+			  <font size="2"> 
+				  <a href="http://bhi2.snu.ac.kr:8000/work/Tutorial/s2/">> Jump several steps</a>
+				  (Uploaded three expiriment data)
+			  </font>
+
           </div>
         </div>
         <div class="col-md-2">
@@ -78,6 +85,7 @@
 	<div class="manual_container">
 	 <font color="blue">Manual</font> <br>
 	 <font color="blue">Citation</font><br>
+	 <font color="blue">Test</font><br>
 
 	</div>
  </div>
