--- a/MLV/templates/select.html
+++ b/MLV/templates/select.html
@@ -207,6 +207,7 @@ div.selectAll("g")
   // Display a tooltip with the current size
   tooltip.transition().duration(40).style("opacity", 1);
   tooltip.text(d.size + " genes are in: " + d.label);
+  console.log(d);
 
   // highlight the current path
   var selection = d3.select(this).transition("tooltip").duration(400);
@@ -230,6 +231,8 @@ div.selectAll("g")
     .style("stroke-opacity", 0);
 })
 
+
+/*
 .on("click", function(d, i) {
   if (d.label.indexOf(' and ')>0) return;
   // toggle input form
@@ -275,6 +278,7 @@ function update_form_data_direct()
   $("#form_sel").val( sel.join(",") );
   $("#form_exc").val( exc.join(",") );
 }
+
 function update_combination_from_venn()
 {
   var sel = [];
@@ -292,6 +296,7 @@ function update_combination_from_venn()
   window.select_combination(sel,exc);
   window.update_form_data();
 }
+*/
 
 // resizing
 function resize_venn()
